# memo-tools

./: .gitignore  .gitlab-ci.yml  .gitmodules  README.md  mkdocs.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.base.json  turbo.json
.github/workflows/: docs.yml
docs/: contributing.md  index.md
docs/architecture/: index.md
docs/maintainers/: implementation.md
docs/reference/: commands.md  configuration.md  library.md
docs/start/: first-workflow.md  install.md
docs/stylesheets/: extra.css
docs/tasks/: ci.md  export.md  import.md  validate.md
scripts/: check-no-ontology-cache.sh  sysand-portability-check.sh  test-clean-install.sh  validate-gpca-example.mjs
tools/diagrams/: README.md  gen-ontology-hierarchy.py
tools/ontology-tools/: diagram-gen.mjs  lint.mjs  package.json  sysand-publish-dry-run.mjs  syside-compat.mjs  sysml-reader.mjs
tools/ontology-viewer/: index.html  package.json  vite.config.ts
tools/ontology-viewer/src/: App.tsx  OntologyViewer.tsx  constants.ts  index.css  loader.ts  types.ts
tools/vscode-extension/: language-configuration.json  package.json  tsconfig.json
tools/vscode-extension/snippets/: memo-ears.code-snippets
tools/vscode-extension/src/: extension.ts
tools/vscode-extension/syntaxes/: sysml.tmLanguage.json
